<resources>
    <string name="app_name">Refine Math</string>
    <string name="mathFormula">90 + 10</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="settings">Settings</string>
    <string name="audio">Audio</string>
    <string name="MathDifficulty">Math Difficulty</string>
    <string name="add">Addition</string>
    <string name="subt">Subtraction</string>
    <string name="mult">Multiplication</string>
    <string name="div">Division</string>
    <string name="neg">Negative Answers</string>
    <string name="musicVol">Music Volume</string>
    <string name="mute">Mute</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>